--- a/Resources/DesktopModules/Admin/SearchResults/App_LocalResources/ResultsSettings.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/SearchResults/App_LocalResources/ResultsSettings.ascx.nl-NL.resx
@@ -13,10 +13,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ControlTitle_settings.Text" xml:space="preserve">
-    <value>Instellingen voor Zoekresultaten</value>
+    <value>Instellingen voor zoekresultaten</value>
   </data>
   <data name="filtersRequired.Text" xml:space="preserve">
-    <value>Er moet tenminste één content type worden geselecteerd</value>
+    <value>Er moet tenminste één content type worden geselecteerd.</value>
   </data>
   <data name="linkTargetOnSamePage.Text" xml:space="preserve">
     <value>Op dezelfde pagina</value>
@@ -25,7 +25,7 @@
     <value>Open nieuwe pagina</value>
   </data>
   <data name="plEnableWildSearch.Help" xml:space="preserve">
-    <value>Zoekacties kunnen worden uitgevoerd door delen van woorden in het zoekvenster in te voeren. in de zoekresultaten zullen dan alle resultaten terugkomen die het hele woord of een deel ervan bevatten. Schakel deze optie uit als het genereren van de zoekresultaten te lang duurt.</value>
+    <value>Zoekacties kunnen worden uitgevoerd door delen van woorden in het zoekvenster in te voeren. In de zoekresultaten zullen dan alle resultaten terugkomen die het hele woord of een deel ervan bevatten. Schakel deze optie uit als het genereren van de zoekresultaten te lang duurt.</value>
   </data>
   <data name="plEnableWildSearch.Text" xml:space="preserve">
     <value>Zoekacties op basis van wildcard standaard toestaan</value>
